kubernetes/apps/mumble/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumble
  labels:
    app: mumble
spec:
  selector:
    matchLabels:
      app: mumble
  template:
    metadata:
      labels:
        app: mumble
    spec:
      containers:
        - name: mumble
          image: mumblevoip/mumble-server:v1.6.870 # {"$imagepolicy": "apps:mumble"}
          ports:
            - containerPort: 64738
              protocol: TCP
            - containerPort: 64738
              protocol: UDP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mumble-data-pvc
