kubernetes/apps/mumble/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mumble-tcp

spec:
  entryPoints:
    - mumble-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mumble
          port: 64738

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: mumble
#  annotations:
#    traefik.ingress.kubernetes.io/router.entrypoints: mumble-tcp
#    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
#spec:
#  rules:
#  - host: immortalkeep.com
#    http:
#      paths:
#      - pathType: Prefix
#        path: /
#        backend:
#          service:
#            name: mumble
#            port:
#              number: 64738
